WIP: Fix RestconfOperationsService.getOperations(UriInfo)
Since we actually have a test suite to exercise the code path, expand
it to cover integration with JSON/XML.

// FIXME: fix the underlying issue by refactoring the implementation
// FIXME: add XML validation as well

JIRA: NETCONF-822
Change-Id: I57760d06240e09940026fee9b195e207853c01b2
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>